# Rossmann-forecast

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  forcast.ipynb  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml  docker.yaml  publish.yaml  publish.yml
api/: logging_config.py  main.py  middleware.py  schemas.py
configs/: config.yaml
loadtest/: locustfile.py
models/: forecast_model_metadata.json
notebooks/: 01_exploration.ipynb
reports/: phase_01_the_sin.md  phase_02_reproducibility.md  phase_03_validation_and_tests.md  phase_04_api_and_containerization.md  phase_05_local_deployment_polish.md  ssh_github_setup_tutorial.md
src/: __init__.py  data.py  features.py  model.py  schema.py
tests/: test_api.py  test_data.py  test_features.py  test_model.py
